feat(rapport): add 6.conclusion file and update the rapport file in consequence

--- a/qualite/rapport/rapport.tex
+++ b/qualite/rapport/rapport.tex
@@ -84,7 +84,7 @@ citecolor=black,  %couleur des références
 
 \tableofcontents
 
-\chapter*{Introduction}
+\chapter{Introduction}
 	\input{1.Introduction.tex}
 
 \chapter{Document de spécifications mis à jour}
@@ -97,12 +97,15 @@ citecolor=black,  %couleur des références
 	\input{2.ChoixTechniques.tex}
 
 \chapter{Problèmes rencontrés \& solutions apportées}
-  \input{3.problemes_solutions.tex}
+  \input{3.Problemes_solutions.tex}
 
 \chapter{Améliorations possibles}
 	\input{4.Ameliorations.tex}
 
-\chapter{Répartition des tâches}
-	\input{5.Repartition.tex}
+\chapter{Gestion de projet}
+	\input{5.Gestion_de_projet.tex}
+
+\chapter{Conclusion}
+\input{6.Conclusion.tex}
 
 \end{document}
