--- a/qualite/soutenance/diapo.tex
+++ b/qualite/soutenance/diapo.tex
@@ -9,7 +9,7 @@
 \title[Javabyrinthe]{Javabyrinthe \\ Projet d'Informatique Répartie}
 \author{Alexandre Brehmer \and Christophe Cluizel  \and Anthony Courtin \and Céline Leduc \and Charlotte Touchard \and Simon Wallon}
 \institute{INSA Rouen}
-\date{\today}
+\date{12 mai 2015}
 
 %ajoute la numérotation des pages et nombre pages total
 \addtobeamertemplate{footline}{\hfill\insertframenumber/\inserttotalframenumber\hspace{2em}\null}
