--- a/qualite/rapport/4.Ameliorations.tex
+++ b/qualite/rapport/4.Ameliorations.tex
@@ -8,4 +8,6 @@
 % =========== Interface graphique ===========
 \section{Interface graphique}
 
-Dans notre idée de départ, afin de ressembler à codinGame, nous voulions que l'utilisateur soit en mesure de taper le code de son IA directement dans l'interface graphique. L'ajout d'une telle fonctionnalité dans Slick2d ne s'avère pas approprié. En effet, ceci complexifie le développement de l'interface et la gestion d'événements et ne permet pas de conserver la coloration syntaxique propre au langage utilisé. Cette fonctionnalité pourrait être considérée comme une amélioration possible, car elle est vraiment pratique d'utilisation mais entraîne un gros travail supplémentaire.
+Dans notre idée de départ, afin de ressembler à codinGame, nous voulions que l'utilisateur soit en mesure de taper le code de son IA directement dans l'interface graphique. L'ajout d'une telle fonctionnalité dans Slick2d ne s'avère pas approprié. En effet, ceci complexifie le développement de l'interface et la gestion d'événements et ne permet pas de conserver la coloration syntaxique propre au langage utilisé. Cette fonctionnalité pourrait être considérée comme une amélioration possible, car elle est vraiment pratique d'utilisation mais entraîne un gros travail supplémentaire.\\
+
+Bien évidemment, l'interface graphique proposé peut être largement amélioré : apparence des boutons, modélisation du labyrinthe, mise à jour de la position des joueurs, etc..
