feat(soutenance): add an image for the frame "demonstration"

--- a/qualite/soutenance/4.demonstation.tex
+++ b/qualite/soutenance/4.demonstation.tex
@@ -1,8 +1,10 @@
 % ========== Démonstration ===========
 \section{Démonstration}
 
-    \begin{frame}
-        \frametitle{Démonstration}
+  \begin{frame}
+    \frametitle{Démonstration}
+    \begin{center}
+      \includegraphics[scale=0.47]{image/partieJavabyrinthe.jpg}
+    \end{center}
 
-
-    \end{frame}
+  \end{frame}
