feat(conception) modification diag de classe

--- a/qualite/conception/conception.tex
+++ b/qualite/conception/conception.tex
@@ -93,7 +93,7 @@ citecolor=black,  %couleur des références
 \chapter{Diagramme d'interactions}
 	\input{3.Interaction.tex}
 
-\chapter{Diagramme de classes}
+\chapter{\textcolor{red}{Diagramme de classes}}
 	\input{4.Classes.tex}
 
 
