feat(soutenance): add of the architecture for the conclusion

--- a/qualite/soutenance/diapo.tex
+++ b/qualite/soutenance/diapo.tex
@@ -41,5 +41,6 @@
   \input{3.problemes_solutions.tex}
   \input{4.demonstation.tex}
   \input{5.analyse_critique_ameliorations.tex}
+  \input{6.conclusion.tex}
 
 \end{document}
