feat(soutenance): introduction

--- a/qualite/soutenance/1.introduction.tex
+++ b/qualite/soutenance/1.introduction.tex
@@ -4,5 +4,10 @@
     \begin{frame}
         \frametitle{Introduction}
 
+			\begin{itemize}
+				\item Un serveur de tournois permettant à des joueurs humains et des IA de s'affronter
+				\vspace{20px}
+				\item Les joueurs placés au centre d'un labyrinthe doivent en sortir
+			\end{itemize}
 
     \end{frame}
