feat(soutenance): analyse critique

--- a/qualite/soutenance/5.analyse_critique_ameliorations.tex
+++ b/qualite/soutenance/5.analyse_critique_ameliorations.tex
@@ -1,8 +1,24 @@
 % ========== Analyse critique ===========
 \section{Analyse critique}
 
-    \begin{frame}
-        \frametitle{Analyse critique}
+	\begin{frame}
+		\frametitle{Analyse critique}
 
-
-    \end{frame}
+		\begin{itemize}
+		\item \textbf{Points forts}
+			\begin{itemize}
+				\item Possibilité de jouer à quatre sur une partie
+				\item Générateur automatique de labyrinthes
+				\item L'utilisateur n'a pas besoin de compiler son code
+			\end{itemize}
+		\vspace{10px}
+		\item \textbf{Pas de problèmes non-résolus}
+		\vspace{10px}
+		\item \textbf{Améliorations possibles}
+			\begin{itemize}
+				\item Exécution de l'IA sur le serveur
+				\item Extension à différents langages
+				\item Code de l'IA directement dans l'interface graphique
+			\end{itemize}
+		\end{itemize}
+	\end{frame}
