feat(soutenance) Conclusion

--- a/qualite/soutenance/6.conclusion.tex
+++ b/qualite/soutenance/6.conclusion.tex
@@ -3,5 +3,12 @@
 
   \begin{frame}
     \frametitle{Conclusion}
-
+    	\begin{itemize}
+    		\item Ce que ce projet nous a apporté :
+    		\begin{itemize}
+    			\item Meilleure compréhension de RMI, de ses contraintes et de ses avantages; 
+    			\item Création d'une interface graphique et gestion des événements liés;
+    			\item Génération de Labyrinthes.
+    		\end{itemize}
+    	\end{itemize}
   \end{frame}
