--- a/qualite/soutenance/3.problemes_solutions.tex
+++ b/qualite/soutenance/3.problemes_solutions.tex
@@ -12,7 +12,8 @@
 		 	\end{itemize}
 		\item \textbf{Interface}
 			\begin{itemize}
-				\item Récupération du choix de direction du joueur humain : Besoin d'une méthode bloquante => Utilisation d'un Thread afin d'attendre que l'utilisateur appuie sur une touche de direction.
+				\item Récupération du choix de direction du joueur humain : Besoin de pouvoir récupérer l'entrée de la fenêtre dans la fonction jouer du joueur => Utilisation d'une fonction statique bloquante afin d'attendre que l'utilisateur appuie sur une touche de direction.
+				\item Affichage des informations des joueurs sur la fenêtre :  Les nouveaux joueurs ont accès aux informations des joueurs déjà présents mais pas l'inverse => à chaque ajout d'un nouveau joueur on met à jour la partie pour les anciens joueurs.
 			\end{itemize}
 		\end{itemize}
     \end{frame}
