fix(rapport): delete TODO

--- a/qualite/rapport/rapport.tex
+++ b/qualite/rapport/rapport.tex
@@ -88,12 +88,12 @@ citecolor=black,  %couleur des références
 	\input{1.Introduction.tex}
 
 \chapter{Document de spécifications mis à jour}
-  Le document suivant reprend nos spécifications mises à jour suite à l'avancement du projet. Les modifications apportées seront signalées en vert.
+  Le document suivant reprend nos spécifications mises à jour suite à l'avancement du projet. Les modifications apportées seront signalées en vert et en rouge.
 	\includepdf[pages=-]{specifications.pdf}
   \emph{Fin du document de spécifications.}
 
 \chapter{Document de conception mis à jour}
-  Le document suivant reprend notre conception mise à jour suite à l'avancement du projet. Les modifications apportées seront signalées en vert.
+  Le document suivant reprend notre conception mise à jour suite à l'avancement du projet. Les modifications apportées seront signalées en vert et en rouge.
 	\includepdf[pages=-]{conception.pdf}
   \emph{Fin du document de conception.}
 
