fix(soutenance): fix syntax error

--- a/qualite/soutenance/5.analyse_critique_ameliorations.tex
+++ b/qualite/soutenance/5.analyse_critique_ameliorations.tex
@@ -8,7 +8,7 @@
 		\item \textbf{Points forts}
 			\begin{itemize}
 				\item Possibilité de jouer à quatre sur une partie
-				\item Générateur automatique de labyrinthes
+				\item Générateur automatique de labyrinthes de taille personnalisée
 				\item L'utilisateur n'a pas besoin de compiler son code
 			\end{itemize}
 		\vspace{10px}
