--- a/qualite/soutenance/6.conclusion.tex
+++ b/qualite/soutenance/6.conclusion.tex
@@ -8,7 +8,7 @@
     		\begin{itemize}
     			\item Meilleure compréhension de RMI, de ses contraintes et de ses avantages
     			\item Création d'une interface graphique et gestion des événements liés
-    			\item Génération de Labyrinthes
+    			\item Génération de labyrinthes
     		\end{itemize}
     	\end{itemize}
   \end{frame}
