maj de l'intro du rapport pour qu'elle ait un lien avec le rapport

--- a/qualite/rapport/1.Introduction.tex
+++ b/qualite/rapport/1.Introduction.tex
@@ -3,7 +3,7 @@
 
     Une soutenance aura lieu, en présence des autres étudiants, composée d'une présentation et d'une démonstration (ou vidéo).
 
-    Il est indispensable que la solution mise en place soit une application distribuée. Le présent document de spécifications a valeur contractuelle et doit être respecté pour la suite du projet.
+    Il est indispensable que la solution mise en place soit une application distribuée. %Le présent document de spécifications a valeur contractuelle et doit être respecté pour la suite du projet.
 
 
 % ----------- Principe général -----------
@@ -15,4 +15,5 @@
 
 % ----------- Contenu du présent document -----------
 \section*{Contenu du présent document}
-	Ce document présente les choix de conception opérés pour réaliser ce projet. Afin de clarifier les spécifications développées précédemment, un diagramme de cas d'utilisation est présenté, ainsi qu'un diagramme d'interactions. Enfin, notre conception est matérialisée par un diagramme de classes.
+	%Ce document présente les choix de conception opérés pour réaliser ce projet. Afin de clarifier les spécifications développées précédemment, un diagramme de cas d'utilisation est présenté, ainsi qu'un diagramme d'interactions. Enfin, notre conception est matérialisée par un diagramme de classes.
+	Ce document présente la synthèse du projet. Il contient une description des choix techniques que nous avons effectué, présente la liste des problèmes rencontrés ainsi que les solutions que nous avons apportées à chacun de ces problèmes. Nous parlons également des améliorations possibles du programme et nous expliquons de quelle manière nous avons géré sur projet, d'un point de vue ressources.
