style(rapport): add blank lines for conclusion

--- a/qualite/rapport/6.Conclusion.tex
+++ b/qualite/rapport/6.Conclusion.tex
@@ -1,9 +1,5 @@
-%%Avec ce projet, nous avons réussi à développer un programme mettant en oeuvre de l'informatique répartie. Nous avons pour cela utilisé des notions vues en cours, en utilisant notament le RMI. Nous avons également appris à manipuler d'autres technologies, comme pour l'IHM avec Slick2D.
+Avec ce projet, nous avons réussi à développer un programme mettant en oeuvre de l'informatique répartie. Pour parvenir à ce résultat, nous avons mis en oeuvre une méthode de type cycle en V. Cela nous a permis de nous répartir le travail de manière efficiente, en découpant notre projet en grands axes. \\
 
-%%Le résultat final est un programme fonctionnel en mode fenetré, pouvant donc être utilisé par des utilisateurs non avertis. 
-
-Avec ce projet, nous avons réussi à développer un programme mettant en oeuvre de l'informatique répartie. Pour parvenir à ce résultat, nous avons mis en oeuvre une méthode de type cycle en V. Cela nous a permis de nous répartir le travail de manière efficiente, en découpant notre projet en grands axes.
-
-Nous avons ainsi pu appliquer diverses notions vu en cours au sein d'un projet pratique. Nous avons en effet utilisé la technologie RMI pour rendre notre programme réparti. Pour ce projet, nous avons également souhaité un affichage en mode fenêtré. Pour cela, nous nous sommes intéressés aux bibliothèques graphiques de Java et plus particulièrement à Slick2D.
+Nous avons ainsi pu appliquer diverses notions vu en cours au sein d'un projet pratique. Nous avons en effet utilisé la technologie RMI pour rendre notre programme réparti. Pour ce projet, nous avons également souhaité un affichage en mode fenêtré. Pour cela, nous nous sommes intéressés aux bibliothèques graphiques de Java et plus particulièrement à Slick2D. \\
 
 Le résultat final est très proche des premières spécifications que nous avions réalisées, et nous sommes donc fiers d'avoir réalisé un programme fonctionnel répondant à nos attentes tant graphiques et fonctionnelles que pédagogiques.
